# rogue-world

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/skills/ask-sandbox/: SKILL.md
apps/agent-runtime/: README.md
apps/agent-runtime/aco_runtime/: __init__.py  __main__.py  client.py  llm_policy.py  main.py  mock_policy.py  protocol.py
apps/agent-runtime/tests/: test_mock_policy.py  test_protocol_client.py
apps/ask-viewer/src-tauri/: Cargo.toml
apps/cli/: package.json
apps/cli/src/: aco.ts
apps/web/: index.html  package.json
apps/web/src/: App.css  App.tsx  index.css  main.tsx  types.ts
apps/world/: package.json
apps/world/src/: config.ts  index.ts
crates/ask-kernel/: Cargo.toml
crates/ask-kernel/data/: f_info.txt
crates/ask-kernel/data/art/: fs_hdg_overlay.toml
crates/ask-kernel/src/: actions.rs  agent_view.rs  art.rs  auth.rs  balance.rs  components.rs  config.rs  describe.rs  events.rs  f_info.rs  feat.rs  gateway.rs  generate.rs  grid.rs  inspect.rs  k_info.rs  lib.rs  main.rs  memory.rs  org.rs  persist.rs  player.rs  process_rules.rs  r_info.rs  sandbox.rs  serve.rs  skill.rs  spatial.rs  tick.rs  vaults.rs  view.rs  viewer.rs  vision.rs  world.rs
crates/ask-kernel/src/agents/: mock.rs  mod.rs
crates/ask-kernel/src/generate/: alloc.rs  features.rs  mod.rs  rooms.rs  tunnel.rs
crates/ask-kernel/src/serve/: api.rs  mod.rs  ws.rs
crates/ask-kernel/src/systems/: build.rs  combat.rs  craft.rs  death.rs  dig.rs  harvest.rs  interact.rs  inventory_act.rs  items.rs  mod.rs  monster.rs  movement.rs  process.rs  terrain.rs  use_item.rs  verbs.rs
crates/ask-kernel/static/: app.css  app.js  art.js  bus.js  index.html  input.js  mapview.js  net.js  render.js  state.js  themes.js
crates/ask-kernel/static/panels/: dispatch.js  hud.js  inspect.js  logview.js  tracker.js
crates/ask-kernel/tests/: architecture.rs  art_snapshot.rs  f_info_contract.rs  http_api.rs  open_ratio.rs  persist_v2.rs  sim_rules.rs  ws_api.rs
docs/: ARCHITECTURE.md  INDEX.md
scripts/: check-frontend.mjs  dev.sh  run-dev.sh
skills/aco-play/: SKILL.md
tests/frontend/: bus.test.mjs  state.test.mjs
(+39 files in other folders)
