[package]
name = "ask-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Simulation Kernel — digital world kernel for agents"

[[bin]]
name = "ask-kernel"
path = "src/main.rs"

[dependencies]
bevy_ecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
