[package]
name = "ask-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Simulation Kernel — digital world kernel for agents"

[[bin]]
name = "ask-kernel"
path = "src/main.rs"

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }

[dependencies]
bevy_ecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
